# qrc-svn

chatsort/trunk/: Makefile  Makefile.in  config.h  config.status  configure.ac
chatsort/trunk/CVS/: Repository
chatsort/trunk/autom4te.cache/CVS/: Repository
debian/gaim-qrc/tags/0.34.0-1/debian/: copyright
debian/gaim-qrc/tags/0.34.1-1/debian/: changelog
debian/gaim-qrc/trunk/debian/: changelog  control  rules  watch
gaym/trunk/: Include.mingw  Makefile  Makefile.am  Makefile.in  Makefile.mingw  README.mingw  TODO  aclocal.m4  autogen.sh  bootstrap.sh  config.h  config.status  configure  configure.ac  gaym_working.prj.bak  libtool
gaym/trunk/nsis/: Makefile.am  gaim-gaym.nsi  installer.nsi
gaym/trunk/nsis/pixmaps/: Makefile.am
gaym/trunk/pixmaps/: Makefile.am  Makefile.in  Makefile.mingw
gaym/trunk/src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  TODO  cmds.c  dcc_send.c  gaym.c  gaym.h  gaympriv.c  helpers.c  helpers.h  msgs.c  parse.c  weblogin.c
gaym/trunk/src/protocols/: Makefile.am
gaym/trunk/src/protocols/gaym/: Makefile.am  TODO  cmds.c  gaym.c  gaym.h  helpers.c  helpers.h  msgs.c  parse.c  weblogin.c
qrc/branches/buddy_icon_hack/gaym-extras/src/: chatsort.c  roombrowse.c
qrc/branches/buddy_icon_hack/gaym/src/: gaym.c  gaym.h  msgs.c  weblogin.c
qrc/branches/fork-for-gaim-1.5/: README  README.svn
qrc/branches/fork-for-gaim-1.5/display-options/: display-options.c
qrc/branches/fork-for-gaim-1.5/gaym-extras/: Makefile.am
qrc/branches/fork-for-gaim-1.5/gaym-extras/src/: chaticon.c  gaym-extras.c  roombrowse.c
qrc/branches/fork-for-gaim-1.5/gaym/src/: gaym.h  gayminfo.c  gayminfo.h  helpers.h  msgs.c  weblogin.c
qrc/branches/fork-for-gaim-1.5/nsis/: installer.nsi
qrc/branches/fork-for-gaim-2/: ChangeLog  Makefile.am  configure.ac
qrc/branches/fork-for-gaim-2/bot-challenger/: bot-challenger.c
qrc/branches/fork-for-gaim-2/gaym-extras/src/: Makefile.am  bio-popups.c  chatsort.c  gaym-extras.c  roombrowse.c
qrc/branches/fork-for-gaim-2/gaym/src/: Makefile.am  botfilter.c  cmds.c  dcc_send.c  gaym.c  gaym.h  gayminfo.c  gaympriv.h  helpers.c  msgs.c  parse.c  weblogin.c
qrc/branches/fork-for-gaim-2/trunk/: configure.ac  format
qrc/branches/thumbnail_in_chat/: ChangeLog  TODO
qrc/branches/thumbnail_in_chat/bot-challenger/: Makefile.am
qrc/branches/thumbnail_in_chat/gaym/src/: helpers.c  parse.c
qrc/branches/thumbnail_in_chat/nsis/locale/: english.nsh
qrc/branches/thumnail_in_chat/gaym/src/: gaym.c  gayminfo.c  gayminfo.h  gaympriv.c  helpers.h  msgs.c  weblogin.c
qrc/tags/0.21.0/: aclocal.m4  config.h  config.status  configure.ac  gaym_working.pws
qrc/tags/0.21.0/src/: Makefile  Makefile.am  gaym.c  gaym.h  helpers.c  parse.c
qrc/tags/0.33.0/: config.h.in  configure
qrc/tags/0.33.0/src/: TODO  cmds.c  gaym.c  helpers.h
qrc/tags/0.34.0/: ChangeLog  Makefile.am  README
qrc/tags/0.34.0/gaym/src/: gaym.c  parse.c
qrc/tags/0.34.1/: ChangeLog  README  configure.ac
qrc/tags/0.34.1/gaym/src/: botfilter.h  configtxt.h  gaym.c  helpers.c  helpers.h  msgs.c  weblogin.c
qrc/tags/0.34.1/nsis/: installer.nsi
qrc/tags/0.34.1/roombrowse/: Makefile.am
qrc/tags/release-0.9/: README.mingw
qrc/tags/release-0.9.5/: configure.ac
qrc/tags/release-0.9.5/gaym-extras/pixmaps/: Makefile.am
qrc/tags/release-0.9.5/gaym-extras/src/: chatsort.c  gaym-extras.h
qrc/tags/release-0.9.5/gaym/src/: gaym.c  gayminfo.c  gaympriv.h  helpers.c
qrc/tags/release-0.9.7/display-options/: Makefile.am
qrc/tags/release-0.9.7/gaym-extras/src/: gaym-extras.h
qrc/tags/release-0.9.7/gaym/src/: cmds.c  helpers.c
qrc/tags/release-0.9/gaym-extras/src/: Makefile.am  bio-popups.c
qrc/tags/release-0.9/gaym/src/: Makefile.am  gaym.c  msgs.c
qrc/tags/stable-7-30/: ChangeLog  configure.ac
qrc/tags/stable-7-30/gaym-extras/: Makefile.am  bio-popups.c  chatsort.c  gaym-extras.c
qrc/tags/stable-7-30/gaym/src/: cmds.c
qrc/trunk/: ChangeLog  Makefile.am  configure.ac
qrc/trunk/bot-challenger/: bot-challenger.c
qrc/trunk/chaticon/: Makefile.am  chaticon.c
qrc/trunk/chatsort/: Makefile.am
qrc/trunk/gaym-extras/: Makefile.am  bio-popups.c  chaticon.c  chatsort.c  gaym-extras.c  gaym-extras.h  roombrowse.c
qrc/trunk/gaym-extras/pixmaps/: Makefile  Makefile.in
qrc/trunk/gaym-extras/src/: .chatsort.c.swp  Makefile  Makefile.in  bio-popups.c  chaticon.c  chatsort.c  gaym-extras.c  gaym-extras.h  roombrowse.c
qrc/trunk/gaym-extras/src/.deps/: bio-popups.Plo  chaticon.Plo  chatsort.Plo  gaym-extras.Plo
qrc/trunk/gaym-extras/src/.libs/: libgaym-extras.lai
qrc/trunk/gaym/pixmaps/16/: Makefile  Makefile.am  Makefile.in
qrc/trunk/gaym/pixmaps/22/: Makefile  Makefile.am  Makefile.in
qrc/trunk/gaym/pixmaps/48/: Makefile  Makefile.am  Makefile.in
qrc/trunk/gaym/src/: Makefile.am  botfilter.c  botfilter.h  cmds.c  configtxt.c  dcc_send.c  gaym.c  gaym.h  gayminfo.c  gayminfo.h  gaympriv.c  gaympriv.h  helpers.c  helpers.h  msgs.c  parse.c  url_fetch.c  weblogin.c
qrc/trunk/nsis/: Makefile.am  installer.nsi
qrc/trunk/nsis/locale/: Makefile.am
roombrowse/trunk/: Makefile.in  aclocal.m4  config.h.in  mkinstalldirs  mktags  roombrowse.c  roombrowse.c.old
roombrowse/trunk/autom4te.cache/: traces.0
trunk/: ChangeLog  Makefile.am  Makefile.mingw  README  README.gaym  README.svn  TODO  autogen.sh  configure.ac
trunk/bot-challenger/: bot-challenger.c
trunk/chatsort/: Makefile  Makefile.am  aclocal.m4  chatsort.c  config.h.in  configure  libtool
trunk/chatsort/CVS/: Entries
trunk/chatsort/autom4te.cache/CVS/: Root
trunk/gaym/: Makefile.am  Makefile.mingw  README.mingw  bioline.r18.patch  gaym.c
trunk/gaym/pixmaps/: Makefile.am
trunk/gaym/src/: Makefile.am  botfilter.c  botfilter.h  cmds.c  gaym.c  gaym.h  gaympriv.c  gaympriv.h  helpers.c  msgs.c
trunk/nsis/: installer.nsi
trunk/nsis/locale/: english.nsh
trunk/roombrowse/: .roombrowse.c.swp  Makefile.am  configure  cscope.out  roombrowse.c  tags
trunk/roombrowse/autom4te.cache/: output.0
