if COND_CHATSORT
MAYBE_CHATSORT = chatsort
endif

if COND_GAYM
MAYBE_GAYM = gaym
endif

if COND_PRIVACY
MAYBE_PRIVACY = privacy
endif

if COND_ROOMBROWSE
MAYBE_ROOMBROWSE = roombrowse
endif

EXTRA_DIST = \
	README.mingw \
	TODO

SUBDIRS = \
	nsis \
	$(MAYBE_CHATSORT) \
	$(MAYBE_GAYM) \
	$(MAYBE_PRIVACY) \
	$(MAYBE_ROOMBROWSE)
