if COND_BOT_CHALLENGER
MAYBE_BOT_CHALLENGER = bot-challenger
endif

if COND_CHATICON
MAYBE_CHATICON = chaticon
endif

if COND_GAYM
MAYBE_GAYM = gaym
endif

if COND_ROOMBROWSE
MAYBE_ROOMBROWSE = roombrowse
endif

EXTRA_DIST = \
	README.mingw \
	TODO

SUBDIRS = \
	nsis \
	$(MAYBE_BOT_CHALLENGER) \
	$(MAYBE_CHATICON) \
	$(MAYBE_GAYM) \
	$(MAYBE_ROOMBROWSE)
